@@ -139,9 +139,9 @@ ClutterBox2DJoint *clutter_box2d_add_prismatic_joint (ClutterBox2D        *box2d
  *
  * Returns: a ClutterBox2DJoint handle.
  */
-ClutterBox2DJoint *clutter_box2d_add_mouse_joint (ClutterBox2D     *box2d,
-                                                  ClutterActor     *actor,
-                                                  ClutterVertex    *target);
+ClutterBox2DJoint *clutter_box2d_add_mouse_joint (ClutterBox2D           *box2d,
+                                                  ClutterActor           *actor,
+                                                  const ClutterVertex    *target);
 
 
 /**
